# vietflux-ime

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  extract_code.py
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
app/: README.md  package-lock.json  package.json
app/legacy_backup/src/: index.html  styles.css
app/src/: App.tsx  index.css  index.html  styles.css
app/src-tauri/: Cargo.toml  cargo_errors.txt  package-lock.json  package.json  tauri.conf.json  test_errors.txt
app/src-tauri/capabilities/: default.json
app/src-tauri/icons/: icon.icns
app/src-tauri/src/: ime.rs  keyboard.rs  lib.rs  main.rs
app/src-tauri/src/core/: buffer.rs  mod.rs  phonology.rs  processor.rs  transform.rs  validator.rs
app/src-tauri/src/core/data/: keycodes.rs  mod.rs  rules.rs  unicode.rs
app/src/components/: AppHeader.tsx  FooterLinks.tsx  LinuxVariant.tsx  MacOSVariant.tsx  PopoverContainer.tsx  PrimarySwitch.tsx  SegmentedControl.tsx  (+3 more)
core/: Cargo.toml  clippy_log.txt  test_log.txt  test_output.txt
core/src/: buffer.rs  chars.rs  engine.rs  lib.rs  shortcut.rs  shortcuts.rs  transform.rs  validation.rs
core/src/methods/: mod.rs  telex.rs  vni.rs
docs/: FAQ.md  INSTALL.md  WORKFLOWS.md
extracted_ui/components/: FooterLinks.tsx  WindowsVariant.tsx
new_ui_assets/: index.html  package.json
new_ui_assets/src/: App.tsx  VERSION_SETUP.md
scripts/: bump_version.ps1
temp_ui/: ai_chat.json  canvas.fig  meta.json
web/: index.html
(+2 files in other folders)
