[package]
name = "vietflux-core"
version = "1.0.1"
edition = "2021"
description = "High-performance Vietnamese IME engine with WebAssembly support"
license = "MIT"
authors = ["VietFlux Team"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
wasm-bindgen-test = "0.3"

[profile.release]
opt-level = "s"      # Optimize for size
lto = true           # Link-time optimization
codegen-units = 1    # Better optimization
